--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel": "^6.23.0",
     "iview": "^3.0.0",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.17",
+    "vue-loader": "^15.2.6",
     "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.17",
     "vuex": "^3.0.1"
   },
   "keywords": [
@@ -25,7 +29,7 @@
     "cli"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
