--- a/package.json
+++ b/package.json
@@ -15,13 +15,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "babel": "^6.23.0",
     "iview": "^3.0.0",
-    "less-loader": "^4.1.0",
     "vue": "^2.5.17",
-    "vue-loader": "^15.2.6",
     "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.17",
     "vuex": "^3.0.1"
   },
   "keywords": [
@@ -34,12 +30,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^4.0.3",
@@ -50,6 +48,8 @@
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
+    "vue-loader": "^15.2.6",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^4.16.4",
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.5",
