--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "vue-loader": "^15.2.6",
+    "vue-style-loader": "^4.1.1",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.16.4",
     "webpack-cli": "^2.1.5",
